(lang dune 3.4)

(name AnyApp)

(source
 (github TrashGameDeveloper/AnyApp))

(authors 
  "Xiaolong Gao"
  "Matthew Rosen"
  "Daniel Jann"  
)

(maintainers "Daniel Jann")

(license LICENSE)

(package
 (name AnyApp)
 (synopsis "Small Dashboard Project")
 (description "Small Dashboard Project That Tracks The (Something)")
 (depends 
  ocaml
  dune
 )
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
